# DogeTitter

./: README.md  background.js  contentScript.js  manifest.json  popup.html  popup.js  service_worker.js
3rd Party/VST_SDK/: copy_vst2_to_vst3_sdk.bat  copy_vst2_to_vst3_sdk.sh
3rd Party/VST_SDK/VST3_Project_Generator/: README.md
3rd Party/VST_SDK/VST3_Project_Generator/macOS/VST3_Project_Generator.app/Contents/: CodeResources  Info.plist
3rd Party/VST_SDK/VST3_Project_Generator/macOS/VST3_Project_Generator.app/Contents/_CodeSignature/: CodeResources
3rd Party/VST_SDK/my_plugins/helloworld/: CMakeLists.txt
3rd Party/VST_SDK/my_plugins/helloworld/include/: plugcontroller.h  plugids.h  plugprocessor.h  version.h
3rd Party/VST_SDK/my_plugins/helloworld/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
3rd Party/VST_SDK/my_plugins/helloworld_with_VSTGUI/: CMakeLists.txt
3rd Party/VST_SDK/my_plugins/helloworld_with_VSTGUI/include/: plugcontroller.h  plugids.h  plugprocessor.h  version.h
3rd Party/VST_SDK/my_plugins/helloworld_with_VSTGUI/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
3rd Party/VST_SDK/vst3sdk/cmake/modules/: SMTG_AddCommonOptions.cmake  SMTG_AddVST3Options.cmake  SMTG_Platform_Windows.cmake  SMTG_VST3_SDK.cmake
HarmoniPlex200/HarmoniPlex200/: CMakeLists.txt
HarmoniPlex200/HarmoniPlex200/resource/: myplugineditor.uidesc
HarmoniPlex200/HarmoniPlex200/source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
